syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "UiClient/Common/service.proto";

option csharp_namespace = "TrustedSoftwareService";

service TrustedSoftware {
  rpc Get (GetRequest) returns (GetResponse);
  rpc GetExist (Request) returns (GetResponse);
  rpc Add (Request) returns (CommandResponse);
  rpc Update (Request) returns (CommandResponse);
  rpc Remove (Request) returns (CommandResponse);
}



message GetRequest {
  PageModel page_model = 1;
}

message GetAllNamesRequest {}

message Request {
  repeated ProtoTrustedSoftware hardware = 1;
}



message GetResponse {
  oneof QueryResult {
    TrustedSoftwareData data = 1;
    google.protobuf.StringValue error_message = 2;
  }
}



message TrustedSoftwareData {
  repeated ProtoTrustedSoftware recommendations = 1;
}

message Data {
  repeated string names = 1;
}



message ProtoTrustedSoftware {
  bytes id = 1;
  string name = 2;
  string version = 3;
  google.protobuf.BytesValue parent_id = 4;
}