syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "UiClient/Common/service.proto";

option csharp_namespace = "TrustedSoftwareBenchmarkService";

service TrustedSoftwareBenchmark {
  rpc Get (GetOneRequest) returns (GetTrustedSoftwareBenchmarkResponse);
  rpc GetAll (GetAllNamesRequest) returns (GetAllTrustedSoftwareBenchmarkNamesResponse);
  rpc Add (TrustedSoftwareBenchmarkRequest) returns (CommandResponse);
  rpc Update (TrustedSoftwareBenchmarkRequest) returns (CommandResponse);
  rpc Remove (TrustedSoftwareBenchmarkRequest) returns (CommandResponse);
}



message GetOneRequest {
  string parent_name = 1;
}

message GetAllNamesRequest {}

message TrustedSoftwareBenchmarkRequest {
  ProtoTrustedSoftwareBenchmark benchmark = 1;
}



message GetTrustedSoftwareBenchmarkResponse {
  oneof QueryResult {
    TrustedSoftwareBenchmarkData data = 1;
    google.protobuf.StringValue error_message = 2;
  }
}

message GetAllTrustedSoftwareBenchmarkNamesResponse {
  oneof QueryResult {
    Data data = 1;
    google.protobuf.StringValue error_message = 2;
  }
}



message TrustedSoftwareBenchmarkData {
  ProtoTrustedSoftwareBenchmark benchmark = 1;
}


message Data {
  repeated string names = 1;
}



message ProtoTrustedSoftwareBenchmark {
  bytes id = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.BytesValue parent_id = 4;
}